--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/664068d79f.js" crossorigin="anonymous"></script>
     <script src="scripts/main.js" async></script>
 
-    <title>Alex Mauthe | Technical Support Engineer</title>
+    <title>Alex Mauthe | Technical Support Engineer, Level 2</title>
   </head>
 
   <body>
@@ -43,35 +43,43 @@
                     <!-- <img src="img/bighead.svg" class="bighead"> -->
                     <div class="about__skills">
                       <div class="skillBox">
-                        <img src="https://compsciblog.s3.us-west-1.amazonaws.com/react.svg" class="skillIcon" alt="react" title="react">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original-wordmark.svg" class="skillIcon" 
+alt="react" title="react">
                         <p>React</p>
                       </div>
                       <div class="skillBox">
-                        <img src="https://compsciblog.s3.us-west-1.amazonaws.com/redux.svg" class="skillIcon" alt="redux" title="redux">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/redux/redux-original.svg" class="skillIcon" alt="redux" 
+title="redux">
                         <p>Redux</p>
                       </div>
                       <div class="skillBox">
-                        <img src="https://compsciblog.s3.us-west-1.amazonaws.com/jest.svg" class="skillIcon" alt="jest" title="jest">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jest/jest-plain.svg" class="skillIcon" alt="jest" 
+title="jest">
                         <p>Jest</p>
                       </div>
                       <div class="skillBox">
-                        <img src="https://compsciblog.s3.us-west-1.amazonaws.com/postgresql.svg" class="skillIcon" alt="postgresql" title="postgresql">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original-wordmark.svg" 
+class="skillIcon" alt="postgresql" title="postgresql">
                         <p>PostgreSQL</p>
                       </div>
                       <div class="skillBox">
-                        <img src="https://compsciblog.s3.us-west-1.amazonaws.com/nodejs.svg" class="skillIcon" alt="nodejs" title="nodejs">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg" class="skillIcon" 
+alt="nodejs" title="nodejs">
                         <p>Node.js</p>
                       </div>
                       <div class="skillBox">
-                      <img src="https://compsciblog.s3.us-west-1.amazonaws.com/typescript.svg" class="skillIcon" alt="typescript" title="typescript">
+                      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" class="skillIcon" 
+alt="typescript" title="typescript">
                       <p>TypeScript</p>
                     </div>
                     <div class="skillBox">
-                      <img src="https://compsciblog.s3.us-west-1.amazonaws.com/tailwind.svg" class="skillIcon" alt="tailwind" title="tailwind">
+                      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original-wordmark.svg" 
+class="skillIcon" alt="tailwind" title="tailwind">
                       <p>Tailwind</p>
                     </div>
                       <div class="skillBox">
-                      <img src="https://compsciblog.s3.us-west-1.amazonaws.com/sass.svg" class="skillIcon" alt="sass" title="sass">
+                      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/sass/sass-original.svg" class="skillIcon" alt="sass" 
+title="sass">
                       <p>SASS</p>
                     </div>  
                 </div>
