--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="section__overlay"></div>
           <div class="hero__text">
               <h1 class="hero__title">Alexander Mauthe</h1>
-              <p class="hero__info">Technical Support Engineer</p>
+              <p class="hero__info">Technical Support Engineer, Level 2</p>
               <a class="button" href="#projects">Projects</a>
           </div>
           <ul class="socialSide">
